@@ -10,13 +10,13 @@ BEGIN {
     require DBIx::Class;
     plan skip_all => 'Test needs ' . DBIx::Class::Optional::Dependencies->req_missing_for ('test_replicated')
       unless DBIx::Class::Optional::Dependencies->req_ok_for ('test_replicated');
-}
 
+    if (DBICTest::RunMode->is_smoker) {
+      my $mver = Moose->VERSION;
+      plan skip_all => "A trial version $mver of Moose detected known to break replication - skipping test known to fail"
+        if ($mver >= 1.99 and $mver <= 1.9902);
+    }
 
-if (DBICTest::RunMode->is_smoker) {
-  my $mver = Moose->VERSION;
-  plan skip_all => "A trial version $mver of Moose detected known to break replication - skipping test known to fail"
-    if ($mver >= 1.99 and $mver <= 1.9902);
 }
 
 use Test::Moose;
@@ -31,10 +31,10 @@ note "Using Moose version $Moose::VERSION and MooseX::Types version $MooseX::Typ
 
 my $var_dir = quotemeta ( File::Spec->catdir(qw/t var/) );
 
-use_ok 'DBIx::Class::Storage::DBI::Replicated::Pool';
-use_ok 'DBIx::Class::Storage::DBI::Replicated::Balancer';
-use_ok 'DBIx::Class::Storage::DBI::Replicated::Replicant';
-use_ok 'DBIx::Class::Storage::DBI::Replicated';
+use DBIx::Class::Storage::DBI::Replicated::Pool;
+use DBIx::Class::Storage::DBI::Replicated::Balancer;
+use DBIx::Class::Storage::DBI::Replicated::Replicant;
+use DBIx::Class::Storage::DBI::Replicated;
 
 
 =head1 HOW TO USE
